# Algo-MIPT

./: CMakeLists.txt  contributors.txt
A_patternInString/: CMakeLists.txt
A_patternInString/KMP/: CMakeLists.txt  KMP.cpp  KMP.h
A_patternInString/Main/: CMakeLists.txt  main.cpp
A_patternInString/Tests/: CMakeLists.txt  tests.cpp
A_trade_arbitrage/: CMakeLists.txt  SalesGraph.cpp  SalesGraph.h  main.cpp
A_trade_arbitrage/A_Main/: CMakeLists.txt  main.cpp
A_trade_arbitrage/A_Tests/: CMakeLists.txt  tests.cpp
A_trade_arbitrage/GraphLib/: CMakeLists.txt  SalesGraph.cpp  SalesGraph.h
A_trade_arbitrage/Main/: CMakeLists.txt
A_trade_arbitrage/Tests/: CMakeLists.txt
B1_StringByPrefixFunc/: CMakeLists.txt
B1_StringByPrefixFunc/Main/: CMakeLists.txt  main.cpp
B1_StringByPrefixFunc/PrefixFunc/: CMakeLists.txt  PrefixFunc.cpp  PrefixFunc.h
B1_StringByPrefixFunc/Tests/: CMakeLists.txt  tests.cpp
B_puzzle/: CMakeLists.txt  Field.cpp  Field.h  PuzzleSolver.cpp  PuzzleSolver.h  main.cpp
B_puzzle/B_Main/: CMakeLists.txt  main.cpp
B_puzzle/B_Tests/: CMakeLists.txt  tests.cpp
B_puzzle/Main/: CMakeLists.txt
B_puzzle/SolverLib/: CMakeLists.txt  Field.cpp  Field.h  PuzzleSolver.cpp  PuzzleSolver.h
B_puzzle/Tests/: CMakeLists.txt  tests.cpp
C_PatternQuestion/: CMakeLists.txt
C_PatternQuestion/AkhoStateMachine/: AkhoStateMachine.cpp  AkhoStateMachine.h  CMakeLists.txt
C_PatternQuestion/Main/: CMakeLists.txt  main.cpp  main.cpp.cpp
C_PatternQuestion/Tests/: CMakeLists.txt  tests.cpp
C_floyd/: CMakeLists.txt  GraphForFloyd.cpp  main.cpp
C_floyd/C_GraphLib/: CMakeLists.txt  GraphForFloyd.cpp  GraphForFloyd.h
C_floyd/C_Main/: CMakeLists.txt  main.cpp
C_floyd/C_Tests/: CMakeLists.txt  tests.cpp
C_floyd/GraphLib/: GraphForFloyd.h
C_floyd/Main/: main.cpp
C_floyd/Tests/: tests.cpp
D_DifferentSubstrings/: CMakeLists.txt
D_DifferentSubstrings/Main/: CMakeLists.txt  main.cpp
D_DifferentSubstrings/SuffArray/: CMakeLists.txt  SuffArray.cpp  SuffArray.h
D_DifferentSubstrings/Tests/: CMakeLists.txt  tests.cpp
D_kruskal/: CMakeLists.txt  DSU.cpp  Graph.cpp  main.cpp
D_kruskal/files_for_tests/: CMakeLists.txt  DifficultGraph  EqualEdges  FullGraph  MoreCycles  tests.cpp
D_kruskal/kruskal_main/: CMakeLists.txt  main.cpp
D_kruskal/source/: CMakeLists.txt  DSU.cpp  DSU.h  Graph.cpp  Graph.h
E_MaxFlow/: CMakeLists.txt
E_MaxFlow/Main/: CMakeLists.txt  main.cpp
E_MaxFlow/NetworkLib/: CMakeLists.txt  Network.cpp  Network.h
E_MaxFlow/Tests/: CMakeLists.txt  tests.cpp
E_Treap/: CMakeLists.txt
E_Treap/TreapLib/: BST.cpp  BST.h  CMakeLists.txt  Treap.cpp  Treap.h
E_Treap/TreapMain/: CMakeLists.txt  main.cpp
E_Treap/TreapTests/: CMakeLists.txt  tests.cpp
F_Hamming/: CMakeLists.txt
F_Hamming/Main/: CMakeLists.txt  main.cpp
F_Hamming/Tests/: CMakeLists.txt  tests.cpp
F_SecondStatistics/: CMakeLists.txt
F_SecondStatistics/Tests/: CMakeLists.txt  tests.cpp
Main/: CMakeLists.txt  main.cpp
SuffArray/: SuffArray.cpp  SuffArray.h
(+8 files in other folders)
